objects/tfn_Galaxias_Help__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Article_Details__c</fullName>
        <label>Article Details</label>
        <length>10240</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tfn_Category__c</fullName>
        <label>Category</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Help_Article_ID__c</fullName>
        <displayFormat>HLP{0000}</displayFormat>
        <label>Help Article ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Galaxias Help</label>
    <nameField>
        <label>Galaxias Help Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Galaxias Help</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>